# model-canary

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  labeler.yml  release.yml  security.yml  stale.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: alerting.md  api.md  architecture.md  cli.md  configuration.md  evaluators.md  faq.md  getting-started.md  index.md  plugins.md  providers.md  roadmap.md  storage.md  troubleshooting.md
docs/deployment/: docker.md  github-actions.md  kubernetes.md
examples/configs/: model-canary-full.yml
examples/prompts/coding/: fibonacci.yml
examples/prompts/json/: user_profile.yml
examples/prompts/reasoning/: logic_puzzle.yml
examples/prompts/security/: prompt_injection.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
src/model_canary/: __init__.py  engine.py
src/model_canary/alerting/: __init__.py  base.py  discord.py  factory.py  github.py  log.py  slack.py  webhook.py
src/model_canary/api/: __init__.py  app.py
src/model_canary/benchmark/: __init__.py  runner.py
src/model_canary/cli/: __init__.py
src/model_canary/config/: __init__.py  loader.py
src/model_canary/core/: __init__.py  exceptions.py  interfaces.py  models.py
src/model_canary/drift/: __init__.py  engine.py
src/model_canary/evaluators/: __init__.py  base.py  bleu.py  contains.py  exact_match.py  json_validator.py  llm_judge.py  python_executor.py  regex.py  rouge.py  similarity.py
src/model_canary/fingerprinting/: __init__.py  engine.py
src/model_canary/metrics/: __init__.py  collector.py
src/model_canary/plugins/: __init__.py  manager.py
src/model_canary/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  cohere.py  custom.py  deepseek.py  factory.py  fireworks.py  gemini.py  grok.py  litellm.py  lm_studio.py  mistral.py  ollama.py  openai.py  openrouter.py  registry.py  together.py  vllm.py
src/model_canary/reporting/: __init__.py  generator.py
src/model_canary/scheduler/: __init__.py  engine.py
src/model_canary/storage/: __init__.py  base.py  duckdb.py  factory.py  local_json.py  mongodb.py  postgres.py  s3.py  sqlite.py
src/model_canary/types/: __init__.py
src/model_canary/utils/: __init__.py  costs.py  evaluator_loader.py
tests/: test_alerting.py  test_api.py  test_cli.py  test_config.py  test_engine.py  test_evaluators.py  test_imports.py  test_providers.py  test_storage.py  test_utils.py
tests/fixtures/prompts/: sample_prompt.yml
